--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -91,7 +91,14 @@
               <span class="menu-title">Product Management</span>
             </a>
           </li>
-          
+          <li class="nav-item menu-items">
+            <a class="nav-link" onclick="coupnload()">
+              <span class="menu-icon">
+                <i class="mdi mdi-playlist-play"></i>
+              </span>
+              <span class="menu-title">Coupon Management</span>
+            </a>
+          </li>
           
         </ul>
       </nav>
